common/core/monitoring/grafana/extensions/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  annotations:
    external-dns.kubernetes.io/provider: public
    external-dns.kubernetes.io/target: "${PUBLIC_IP}"
spec:
  parentRefs:
    - name: grafana-listeners
      kind: ListenerSet
      group: gateway.networking.k8s.io
  hostnames:
    - grafana.${LOCAL_PUBLIC_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          port: 80
